# badwulf

./: .gitignore  README.md  TODO  pyproject.toml
examples/: wulf.py  wulfdb.py
examples/exampledb/: manifest.toml
src/badwulf/: __init__.py  core.py  db.py  expdb.py  rssh.py  sites.py  sync.py  tools.py  util.py
src/badwulf/cli/: __init__.py  __main__.py  cli.py  clmanager.py  config.py  core.py  dbmanager.py  main.py  proj.py  site.py  sync.py
tests/: test_core.py  test_db.py  test_expdb.py  test_rssh.py  test_sync.py  test_tools.py  test_util.py
tests/testdb/: manifest.toml
tests/testdb-issues/: manifest.toml
tests/testdb/private/Bad Wolf Corporation/data0/: metadata.toml
tests/testdb/private/Bad Wolf Corporation/data1/: metadata.toml
tests/testdb/private/Bad Wolf Corporation/data2/: metadata.toml
tests/testdb/private/Bad Wolf Corporation/data3/: metadata.toml
tests/testdb/public/Bad Wolf Corporation/: metadata.toml
tests/testdb/public/Bad Wolf Corporation/data2/: metadata.toml
tests/testdb/public/Example/example0/: metadata.toml
tests/testdb/public/example/example0/: metadata.toml
tests/testfiles/: badwulf-sites.json  config.json  manifest.json
tests/testindex/: manifest.json
