
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "badwulf"
version = "0.2.17"
authors = [
	{name = "Kylie A. Bemis", email = "k.bemis@northeastern.edu"}
]
description = "Minimal manager for project data on Beowulf clusters"
readme = "README.md"
license = {text = "Artistic License 2.0"}
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"License :: OSI Approved :: Artistic License",
	"Intended Audience :: Science/Research",
	"Operating System :: Unix",
]

[project.scripts]
wulf = "badwulf.cli:main"

[project.urls]
Homepage = "https://github.com/kuwisdelu/badwulf"
Issues = "https://github.com/kuwisdelu/badwulf/issues"

[project.optional-dependencies]
dev = [
	"pytest",
	"ruff",
]

[external]
dependencies = [
	"pkg:generic/ssh",
	"pkg:generic/rsync",
]

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]
